deploy/nva/2-nic/iptables/iptables.rules
# Generated by iptables-save v1.8.7 on Wed Aug 11 23:16:43 2021
*filter
:INPUT ACCEPT [503846:245889975]
:FORWARD ACCEPT [11715:572454]
:OUTPUT ACCEPT [593369:190021026]
COMMIT
# Completed on Wed Aug 11 23:16:43 2021
# Generated by iptables-save v1.8.7 on Wed Aug 11 23:16:43 2021
*mangle
:PREROUTING ACCEPT [1579:386844]
:INPUT ACCEPT [1265:373204]
:FORWARD ACCEPT [314:13640]
:OUTPUT ACCEPT [1339:464027]
:POSTROUTING ACCEPT [1653:477667]
-A PREROUTING ! -s 168.63.129.16/32 -i eth0 -j MARK --set-xmark 0x100/0x300    # in eth0 not AzILB probe use route table 0x100.
-A PREROUTING ! -s 168.63.129.16/32 -i eth1 -j MARK --set-xmark 0x100/0x300    # in eth1 not AzPLB probe use route table 0x100.
-A PREROUTING -s 168.63.129.16/32 -i eth1 -j MARK --set-xmark 0x1000/0x3000    # in eth1 and AzPLB probe use route table 0x1000.
-A PREROUTING -d 20.36.44.155/32 -i eth1 -j MARK --set-xmark 0x1/0xff          # in eth1 and from a LB rule add extra mark for dnat/snat.
-A PREROUTING -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff  # save all marks.
-A FORWARD -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff  # restore all marks from local.
-A OUTPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff   # restore all marks through local.
COMMIT
# Completed on Wed Aug 11 23:16:43 2021
# Generated by iptables-save v1.8.7 on Wed Aug 11 23:16:43 2021
*nat
:PREROUTING ACCEPT [166:8632]
:INPUT ACCEPT [166:8632]
:OUTPUT ACCEPT [384:23040]
:POSTROUTING ACCEPT [384:23040]
-A PREROUTING -i eth1 -p tcp -m mark --mark 0x1/0xff -m tcp --dport 80 -j DNAT --to-destination 10.0.4.12:8080
-A POSTROUTING -o eth0 -m mark --mark 0x1/0xff -j MASQUERADE
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Wed Aug 11 23:16:43 2021
# Generated by iptables-save v1.8.7 on Wed Aug 11 23:16:43 2021
*security
:INPUT ACCEPT [8576:9413117]
:FORWARD ACCEPT [1192:54136]
:OUTPUT ACCEPT [2206:353552]
-A OUTPUT -d 168.63.129.16/32 -p tcp -m owner --uid-owner 0 -j ACCEPT
-A OUTPUT -d 168.63.129.16/32 -p tcp -m conntrack --ctstate INVALID,NEW -j DROP
COMMIT
# Completed on Wed Aug 11 23:16:43 2021
